# ppll_rendering

./: CMakeLists.txt  LICENSE  README.md
asset/: fibers_on_plane.ind
asset/blender_girl/: blender_girl.mtl
asset/hair/: zigzag.ind
asset/monkey/: monkey.mtl
asset/simple_scene/: simple_scene.mtl  simple_scene_fibers.ind
asset/yuksel/: woman.mtl
core/include/xy/: aabb.h  asset.h  camera.h  gpu_array.h  render_layer.h  shader.h  window.h  xy_calc.h  xy_ext.h
core/src/: aabb.cc  asset.cc  camera.cc  gpu_array.cc  render_layer.cc  shader.cc  window.cc
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.2.1-modified/: CMakeLists.txt
glfw-3.2.1-modified/src/: win32_joystick.c  wl_platform.h
imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
imgui/include/imgui/: imgui.h  imgui_internal.h
include/: xy_config.h
shader/: msm_filter.comp  msm_store.frag  msm_store.vert  platte.frag  platte.vert  ppll_blend.frag  ppll_blend.vert  ppll_store.frag  ppll_store.geom  ppll_store.vert
src/: main.cc  shader.h
stb/: stb_image.h  stb_truetype.h
